Solve advertisement image stretched issue and posting title overlyp issue

--- a/sites/all/themes/chomchom/src/sass/layout/_forms.scss
+++ b/sites/all/themes/chomchom/src/sass/layout/_forms.scss
@@ -672,7 +672,7 @@ select.form-control {
   #block-webform-client-block-17 {
     #webform-client-form-17 {
       #edit-submitted-first-name {
-        width: 31%;
+        width: 30%;
       }
       .form-actions {
         button {
